--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,4 +1,3 @@
-
 // Body
 $body-bg: #f5f8fa;
 
@@ -18,7 +17,7 @@ $brand-danger: #bf5329;
 
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
-$font-size-base: 14px;
+$font-size-base: 1rem; // Використовуємо rem для сумісності з Bootstrap
 $line-height-base: 1.6;
 $text-color: #636b6f;
 
