--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9723,4 +9723,26 @@ a.text-dark:hover, a.text-dark:focus {
   }
 }
 
+.navbarTest {
+  background-color: #333;
+  padding: 10px;
+}
+
+.navbarTest .nav-item {
+  color: white;
+  margin-right: 15px;
+}
+
+.navbarTest .nav-item:hover {
+  color: #ddd;
+}
+
+.navbarTest .nav-item .dropdown {
+  display: none;
+}
+
+.navbarTest .nav-item .dropdown:hover {
+  display: block;
+}
+
 /*# sourceMappingURL=app.css.map */
