--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,4 +8,9 @@
 // Bootstrap
 @import "node_modules/bootstrap/scss/bootstrap";
 
+// Fontawesome
+@import "node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
+@import "node_modules/@fortawesome/fontawesome-free/scss/solid";
+
+// Custom imports
 @import "custom";
