--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -1,21 +1,80 @@
-.navbarTest {
-  background-color: #333;
-  padding: 10px;
+main {
+  > .container {
+    padding: 60px 15px 0;
+  }
+}
 
-  .nav-item {
-    color: white;
-    margin-right: 15px;
+.footer {
+  background-color: #eeeeee;
 
-    &:hover {
-      color: #ddd;
-    }
+  > .container {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+}
 
-    .dropdown {
-      display: none;
+code {
+  font-size: 80%;
+}
 
-      &:hover {
-        display: block;
-      }
+/* Form */
+
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+
+  .checkbox {
+    font-weight: 400;
+  }
+
+  .form-control {
+    position: relative;
+    box-sizing: border-box;
+    height: auto;
+    padding: 10px;
+    font-size: 16px;
+
+    &:focus {
+      z-index: 2;
     }
   }
+
+  input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+
+  input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+}
+
+.form-group {
+  &.has-error {
+    input {
+      border-color: orange;
+    }
+  }
+}
+
+.btn {
+  &[disabled] {
+    cursor: not-allowed;
+  }
+}
+
+.text-line-through {
+  text-decoration: line-through;
+}
+
+#loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 40px;
 }
